# lifp-c

./: .clangd  .editorconfig  .gitignore  .gitmodules  .todo  .vimspector.json  .vimspector.session  CMakeLists.txt  Makefile  build.zig  build.zig.zon  flags.mk  main.c
.github/workflows/: build.yml
docs/: guidelines.md  profilers.md
examples/: fibonacci.lifp
lib/: alloc.h  arena.c  arena.h  debug.h  list.c  list.h  map.c  map.h  profile.c  profile.h  result.h
lifp/: environment.c  environment.h  error.h  evaluate.c  evaluate.h  fmt.c  fmt.h  lexer.c  lexer.h  node.c  node.h  parse.c  parse.h  parser.c  parser.h  position.c  position.h  specials.c  token.h  tokenize.c  tokenize.h  value.c  value.h  virtual_machine.c  virtual_machine.h
lifp/std/: core.c  flow.c  io.c  list.c  math.c
src/: alloc.h  arena.c  arena.h  debug.h  environment.c  environment.h  evaluate.c  evaluate.h  fmt.c  fmt.h  lexer.c  lexer.h  lexer.zig  list.c  list.h  main.zig  map.c  map.h  node.c  node.h  parser.c  parser.h  position.h  print.h  result.h  specials.c  stack.c  stack.h  token.c  token.h  value.h
src/std/: core.c  flow.c  list.c  math.c
tests/: arena.test.c  evaluate.test.c  fmt.test.c  integration.test.c  lexer.test  lexer.test.c  list.test.c  map.test.c  memory.test.c  parser.test.c  stack.test.c  test.h  token.test.c  tokenize.test.c  utils.h
